// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`title renders extra large title correctly 1`] = `
<div
  className="govuk-heading-xl"
/>
`;

exports[`title renders large title correctly 1`] = `
<div
  className="govuk-heading-l"
/>
`;

exports[`title renders medium title correctly 1`] = `
<div
  className="govuk-heading-m"
/>
`;
